[package]
name = "blethrs"
version = "0.1.2"
authors = ["Adam Greig <adam@adamgreig.com>"]

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-abort = "0.3.1"
byteorder = { version = "1.2.2", default-features = false }

[build-dependencies]
built = "0.3.0"

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
rev = "21396867114d267da06f19cc54cc4a1883b900a5"
default-features = false
features = ["proto-ipv4", "socket-tcp"]

#[dependencies.stm32f4]
#version = "0.2.3"
#features = ["stm32f407", "rt"]

#[dependencies.stm32f767-hal]
#version = "0.0.1"
#git = "https://github.com/jonlamb-gh/stm32f767-hal.git"
#branch = "master"

[dependencies.stm32f7]
git = "https://github.com/jonlamb-gh/stm32-rs.git"
branch = "stm32f767zit6-patches"
version = "0.2.2"
features = ["stm32f7x7", "rt"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false
